# Gwidi_Importer

./: .gitignore  .gitmodules  CMakeLists.txt  GwidiData.cc  GwidiData.h  Gwidi_Importer-Config.cmake  main.cpp
assets/test_data/: simple.mid  upwards_scale_test.mid
tests/: Test_GwidiData.cc
